--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,10 +7,10 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-$brand-primary:         #f92672;
-$brand-dark:            #373e42;
-$brand-light:           #C0B283;
-$brand-compliment-1:    #C0B283;
+$brand-primary:         #ffffff;
+$brand-dark:            #0e0e4e;
+$brand-light:           #8a7d17;
+$brand-compliment-1:    #8a7d17;
 $brand-compliment-2:    #e9d28a;
 $brand-accent:          $brand-primary;
 
