--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,7 +7,7 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-$brand-primary:         #ffffff;
+$brand-primary:         #000000;
 $brand-dark:            #0e0e4e;
 $brand-light:           #8a7d17;
 $brand-compliment-1:    #8a7d17;
